<resources>
    <string name="cm_app_name">后宫甄嬛传</string>
    <string name="cm_title_activity_update">后宫甄嬛传</string>
    <string name="cm_first_run">游戏首次运行，正在准备资源，请稍候... </string>
    <string name="cm_init_lable">准备下载资源</string>
    <string name="cm_update_lable">正在下载更新v{ver}(约%.1fM)，请稍候...  </string>
    <string name="cm_updateApk_lable">正在下载完整包(约%.1fM)，请稍候...  </string>
    <string name="cm_updateApk_error">网络异常，下载中断，请退出游戏，检查网络是否正常  </string>
    <string name="cm_Apk_error">安装包已损坏，请尝试退出重新进入游戏  </string>
    <string name="cm_getApk_error">资源找不到或网络异常  </string>
    <string name="cm_extractor_data">正在解压资源(不消耗流量)，请稍后...</string>
    <string name="cm_net_error">网络无法连接，请检查后再开始游戏。</string>
    <string name="cm_skip_url">检查到新版本，请更新游戏</string>
    <string name="cm_restart">检查到新版本，是否退出重启更新资源？</string>
    <string name="cm_update_error">新版本资源更新，下载资源错误，请重试</string>
    <string name="cm_serverlist_error">获取服务器列表错误，请重试</string>
    <string name="cm_updatefile_error">更新资源错误，请重试</string>
    <string name="cm_getupdatefile_error">获取资源错误，请重试</string>
    <string name="cm_updateres_error">更新资源错误，请退出游戏重试</string>
    <string name="cm_updateres_reserror">服务器资源错误，请退出游戏重试</string>
    <string name="cm_updateres_neterror">更新资源错误，请检查网络</string>
    <string name="cm_getresource_error">更新文件未成功，请退出重试</string>
    <string name="cm_updatefile_timeout">获取资源超时，请重试</string>
    <string name="cm_unpak_error">更新资源错误，请检查SD是否有足够空间后重试。</string>
    <string name="cm_storage_limit">存储空间不足，请准备至少200M可用空间。</string>
    <string name="cm_storage_none">未检测到SD卡，请插入SD卡后重试</string>
    <string name="cm_apk2sd_error">初始化资源错误，请检查SD卡空间是否充足，尝试重新安装。</string>
    <string name="cm_unzip_nomo">解压出错，请检查SD卡空间是否充足</string>
    <string name="cm_download_serverlist">正在连接服务器，请稍候...</string>
    <string name="cm_download_version">正在连接服务器，请稍候...</string>
    <string name="cm_update_apk">当前游戏客户端不完整，无法运行。</string>
    <string name="cm_extract_files">正在备份资源{ver}，请稍后...</string>
    <string name="cm_copy_ok">资源备份完成，请升级新版本</string>
    <string name="cm_start_unity">启动UnityPlayer……</string>
    <string name="cm_start_game">正在启动游戏，请稍后……</string>
    <string name="cm_net_tips">您当前使用2G/3G/4G上网，游戏需要下载更新资源(约%.1fM)，您确定下载更新并继续游戏吗？</string>
    <string name="cm_system_error">游戏运行环境需要Android系统版本大于2.3，当前手机系统版本过低，无法运行游戏</string>
    <string name="cm_memory_warning">手机当前可用内存约为%.1fM，可用内存较低将可能导致游戏运行失败</string>
    <string name="cm_copyrawpatch_error">拷贝文件出错，请检查存储空间是否大于200M</string>
    <string name="cm_unzip_error">解压缩出错，请退出游戏重试</string>
    
    <string name="bt_upload_image">上传图片</string>
    <string name="bt_camera">拍照</string>
    <string name="bt_photo">从相册中获取</string>
    <string name="bt_cancle">取消</string>
    
    <string name="cm_yes">确定</string>
    <string name="cm_cancel">取消</string>
    <string name="cm_retry">重试</string>
    <string name="cm_exit">退出</string>
    <string name="cm_continue">继续</string>
    <string name="cm_nonet">没有可用的网络</string>
    <string name="cm_setnet">是否对网络进行设置？</string>
    <string name="cm_ok">是</string>
    <string name="cm_no">否</string>
    <string name="cm_warnning1">抵制不良游戏，拒绝盗版游戏。注意自我保护，谨防上当受骗。</string>
    <string name="cm_warnning2">适度游戏益脑，沉迷游戏伤身。合理安排时间，享受健康生活。</string>
</resources>