<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gamelogo" >

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="top|left"
        android:layout_marginTop="4dip"
        android:layout_marginBottom="40dp"
        android:layout_marginLeft="20dp"
        android:textColor="@color/black_overlay" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|center"
        android:layout_marginBottom="80dp"
        android:text="@string/cm_init_lable"
        android:textColor="@color/black"
        android:textSize="12sp"
        android:visibility="invisible" />

    <LinearLayout
        android:id="@+id/splash"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|center"
        android:layout_marginBottom="50dip"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/cm_first_run"
            android:textColor="@color/black"
            android:textSize="12sp" />
    </LinearLayout>

    <FrameLayout
        android:id="@+id/fl"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|center_horizontal"
        android:layout_marginBottom="60dp" >

        <ProgressBar
            android:id="@+id/myprogress"
            style="@android:style/Widget.ProgressBar.Horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="top"
            android:layout_marginLeft="30dip"
            android:layout_marginRight="30dip"
            android:layout_marginTop="26dip"
            android:background="@drawable/frame_di2"
            android:indeterminate="false"
            android:max="100"
            android:maxHeight="15dip"
            android:minHeight="15dip"
            android:progress="0"
            android:progressDrawable="@drawable/progress"
            android:textSize="12sp"
            android:visibility="invisible" />

        <ImageView
            android:id="@+id/iv"
            android:layout_gravity="top"
            android:visibility="invisible"
            android:scaleType="centerInside"
            android:layout_width="1dip"
            android:layout_height="1dip"
            />
    </FrameLayout>

    <TextView
        android:id="@+id/textViewW1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|center"
        android:layout_marginBottom="25dp"
        android:text="@string/cm_warnning1"
        android:textColor="@color/gray"
        android:textSize="9sp"
        android:visibility="visible" />

    <TextView
        android:id="@+id/textViewW2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|center"
        android:layout_marginBottom="12dp"
        android:text="@string/cm_warnning2"
        android:textColor="@color/gray"
        android:textSize="9sp"
        android:visibility="visible" />
</FrameLayout>